force-app/main/default/objects/Map_Finder_Output_Fields__mdt/Map_Finder_Output_Fields__mdt.object-meta.xml
<CustomObject>
    <label>Map Finder Output Fields</label>
    <pluralLabel>Map Finder Output Fields</pluralLabel>
</CustomObject>