force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Address_Property__c.field-meta.xml
<CustomField>
    <fullName>Address_Property__c</fullName>
    <label>Address Property</label>
    <length>40</length>
    <type>Text</type>
</CustomField>