force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>