force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Is_Marker_Description__c.field-meta.xml
<CustomField>
    <fullName>Is_Marker_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Marker Description?</label>
    <type>Checkbox</type>
</CustomField>