force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Is_Marker_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_Marker_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMarker Property?</label>
    <type>Checkbox</type>
</CustomField>