force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>