force-app/main/default/objects/Map_Finder_Output_Fields__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>